--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <input id="username" type="text" name="username" required/>
             <span class="area"></span>
             <label>Email</label>
-            <input id="email" type="text" name="email" required />
+            <input id="email" type="email" name="email" required />
             <span class="error"></span>
             <label>Senha</label>
             <input id="password" type="password" name="password" required/>
